New content fetch for all pages